--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-feast = "^0.18.1"
 fastapi = "^0.74.0"
 gunicorn = "^20.1.0"
 uvicorn = "^0.17.5"
 redis = "^4.1.4"
-airflow = "^0.6"
+feast = "^0.20.2"
+apache-airflow = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
