--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ gunicorn = "^20.1.0"
 uvicorn = "^0.17.5"
 redis = "^4.1.4"
 feast = "^0.20.2"
-apache-airflow = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
@@ -20,6 +19,7 @@ pytest-cov = "^3.0.0"
 flake8 = "^4.0.1"
 black = "^22.1.0"
 isort = "^5.10.1"
+pyinstrument = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
